--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,31 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #f0f0f0;
+}
 #container {
+  background-color: bisque;
   position: relative;
-  width: 500px;
-  height: 500px;
 }
 
-#circle {
+#css-code {
   position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: red;
-  z-index: 999;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #000;
+  height: 360px;
+  display: none;
 }
-
-#stage {
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
+#drag-items {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  height: 40px;
+  text-align: center;
+}
+#drag-items label {
+  margin-top: 10px;
 }
