--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,18 @@ body {
   background-color: bisque;
   position: relative;
 }
+#rect-width{
+  display: none;
+}
+#rect-height{
+  display: none;
+}
+#text-width{
+  display: none;
+}
+#text-height{
+  display: none;
+}
 
 #css-code {
   position: absolute;
@@ -25,6 +37,8 @@ body {
   gap: 10px;
   height: 40px;
   text-align: center;
+  margin-top: 8px;
+  cursor: pointer;
 }
 #drag-items label {
   margin-top: 10px;
