--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,11 @@ body {
 button{
   cursor: pointer;
 }
+
+.fixed-div {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  width: 200px;
+  height: 200px;
+}
