--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,15 @@ button{
   width: 200px;
   height: 200px;
 }
+
+#wrapper {
+  position: relative;
+}
+
+#dynamic-container {
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  width : 100%;
+  height : 400;
+}
